crates/tsuno-driver/tests/fixtures/verify_cli/pass/rejects_open_mutable_reference_on_storage_dead.rs
fn opaque(_: &mut i32) {}

//@ verify
fn bad_scope(mut x: i32) {
    {
        let r = &mut x;
        opaque(r);
    }
}

fn main() {}
